# pps

./: .gitignore  README.md
WebGLEdgeDetection/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
WebGLEdgeDetection/e2e/src/: app.e2e-spec.ts
WebGLEdgeDetection/src/: index.html  styles.scss
WebGLEdgeDetection/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts
WebGLEdgeDetection/src/app/main-page/: main-page.component.html  main-page.component.scss  main-page.component.ts
bruteforce/: CMakeLists.txt  brute_force.c  brute_force.h  file_reader.c  file_reader.h  kernel.cl  main.c  main.h  opencl_kernel_reader.c  opencl_kernel_reader.h  opencl_utils.c  opencl_utils.h  simple_timer.c  simple_timer.h  ui.c  ui.h
edgeDeteciton/: CMakeLists.txt  main.c
edgeDetection/: CMakeLists.txt  edgeDetection.c  edgeDetection.h  file_reader.c  file_reader.h  kernel.cl  main.c  opencl_kernel_reader.c  opencl_kernel_reader.h  opencl_utils.c  opencl_utils.h  simple_timer.c  sobel.h
edgeDetection/img/: img_formula.pgm  img_formula_detected.pgm  img_formula_detectek.pgm  img_some.pgm  img_some_s.pgm  input_img-1.pgm  input_img-2.pgm  input_img-3.pgm  input_img-4.pgm  input_img-5.pgm  input_img-6.pgm
matrix_multiplicator/: CMakeLists.txt  file_reader.c  file_reader.h  helper.c  helper.h  kernel.cl  main.c  main.h  matrix  matrix_computer.c  matrix_computer.h  matrix_reader.c  matrix_reader.h  opencl_kernel_reader.c  opencl_kernel_reader.h  opencl_utils.c  opencl_utils.h  ui.c  ui.h
